# shadow-server

./: .gitignore  .travis.yml  CMakeLists.txt  Design.md  Makefile.am  README.md  acinclude.m4  autogen.sh  configure.ac
src/: CMakeLists.txt  Makefile.am  log.cpp  log.h  shadow.cpp  shadow.h
src/host/: Makefile.am  autoconf.h.in  host.h  sysdeps.h
src/host/posix/: main.cpp
